[package]
name = "apmpkg"
version = "1.5.1"
authors = ["kedap <kedap.dev@protonmail.com>"]
edition = "2021"
description = "Un administrador de paquetes universal para linux como modelo: PKGBUILD"
readme = "README.md"
repository = "https://github.com/Kedap/apmpkg"
license = "Apache-2.0"
keywords = ["package-manager", "linux", "pkgbuild"]

[profile.release]
debug = true

[dependencies]
colored = "2"
clap = {version = "~2.33.0", features = ["yaml"]}
reqwest = "0.11"
tokio = { version = "1", features = ["full"] }
read_input = "0.8"
toml = "0.5"
pbr = "1.0.4"
tar = "0.4"
flate2 = "1.0"
sha2 = "0.10"
nix = "0.20.0"
psutil = { git = "https://github.com/mygnu/rust-psutil", branch = "update-dependencies", default-features = false, features = ["host"] }
exitcode = "1.1.2"
git2 = "0.13"
git2_credentials = "0.7"
lms_lib = "0.4"
syncre_lib = { git = "https://github.com/kedap/syncre" }

[dev-dependencies]
testdir = "0.4"
