[package]
name = "apmpkg"
version = "1.5.2"
authors = ["kedap <kedap.dev@protonmail.com>"]
edition = "2021"
description = "Un administrador de paquetes universal para linux como modelo: PKGBUILD"
readme = "README.md"
repository = "https://github.com/Kedap/apmpkg"
license = "Apache-2.0"
keywords = ["package-manager", "linux", "pkgbuild"]

[profile.release]
debug = true

[dependencies]
colored = "2"
clap = { version = "3.2.8", features = ["derive"] }
reqwest = "0.11"
tokio = { version = "1", features = ["full"] }
read_input = "0.8"
toml = "0.5"
pbr = "1.0.4"
tar = "0.4"
flate2 = "1.0"
sha2 = "0.10"
nix = "0.24"
exitcode = "1.1.2"
git2 = "0.14"
git2_credentials = "0.8"
syncre_lib = { git = "https://github.com/kedap/syncre" }

[dev-dependencies]
temp-dir = "0.1.11"
